--- a/index.html
+++ b/index.html
@@ -56,18 +56,13 @@
         </div>
     </section>
 
-<section id="about" class="section">    
-    <div class="container">        
-        <div class="image" style="position: relative;">
-            <!-- <div class="box" >
-                <h3>Innovating Energy Solutions</h3>
-                <p>We are committed to efficiency, effectiveness, and excellence in all we do.</p>
-            </div>             -->
-            <img src="images/marketing_bg.jpg" alt="About Ping Petroleum" width="900" height="500" style="display: block;">        
-        </div>           
-  
-    </div>
-  </section>
+    <section id="about" class="section">    
+        <div class="container">        
+            <div class="image" style="position: relative;">
+                <img src="images/marketing_bg.jpg" alt="About Ping Petroleum" style="display: block; width: 100%; height: auto;">        
+            </div>           
+        </div>
+    </section>
 
   <section id="about_us">
         <div class="container">
