--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         <h3>Quick Links</h3>
         <ul>
             <li><a href="about_overview.html">About Us</a></li>
-          <li><a href="try-leader.html">Our Leaders</a></li>
-          <li><a href="try-product-overview.html">Our Businesses</a></li>
-          <li><a href="try-contact.html">Contact Us</a></li>
+          <li><a href="about_leader.html">Our Leaders</a></li>
+          <li><a href="business_overview.html">Our Businesses</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
  
