--- a/about_leader.html
+++ b/about_leader.html
@@ -141,7 +141,7 @@
 
 
 
-<footer style="  border-top: 2px solid #53b848;">
+<footer >
     <div class="footer-container">
         <div class="footer-section">
             <img src="images/PINGGGGlogoDNEX.png" alt="">
@@ -160,9 +160,9 @@
         <h3>Quick Links</h3>
         <ul>
             <li><a href="about_overview.html">About Us</a></li>
-          <li><a href="try-leader.html">Our Leaders</a></li>
-          <li><a href="try-product-overview.html">Our Businesses</a></li>
-          <li><a href="try-contact.html">Contact Us</a></li>
+          <li><a href="about_leader.html">Our Leaders</a></li>
+          <li><a href="business_overview.html">Our Businesses</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
  
