--- a/about_leader.html
+++ b/about_leader.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Ping Marketing</title>
+    <title>About Leaders | Ping Marketing</title>
     <link rel="icon" type="image/png" href="images/ico/apple-icon-76x76.png">
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
