--- a/business_overview.html
+++ b/business_overview.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Page</title>
+    <title>Our Businesses | Ping Marketing </title>
+    <link rel="icon" type="image/png" href="images/ico/apple-icon-76x76.png">
+
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css2/main.css">
     <link rel="stylesheet" href="css2/about-overview.css">
