--- a/about_overview.html
+++ b/about_overview.html
@@ -17,7 +17,7 @@
    
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container"> <!-- Add this container div -->
-            <a class="navbar-brand" href="home.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/PINGGGGlogoDNEX.png" alt="logo" class="img-responsive">
             </a>
     
@@ -27,7 +27,7 @@
     
             <div class="collapse navbar-collapse" id="navbarNavRow1">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
                         <div class="dropdown-menu" aria-labelledby="aboutDropdown">
