--- a/business-petrochemical.html
+++ b/business-petrochemical.html
@@ -31,16 +31,16 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
                         <div class="dropdown-menu" aria-labelledby="aboutDropdown">
-                            <a class="dropdown-item" href="about_overview.html">Overview</a>
-                            <a class="dropdown-item" href="about_leader.html">Our Leaders</a>
+                            <a class="dropdown-item" href="about-overview.html">Overview</a>
+                            <a class="dropdown-item" href="about-leader.html">Our Leaders</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="businessDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Businesses</a>
                         <div class="dropdown-menu" aria-labelledby="businessDropdown">
-                            <a class="dropdown-item" href="business_overview.html">Overview</a>
-                            <a class="dropdown-item" href="business_petroleum.html">Petroleum</a>
-                            <a class="dropdown-item" href="business_petrchemical.html">Petrochemical</a>
+                            <a class="dropdown-item" href="business-overview.html">Overview</a>
+                            <a class="dropdown-item" href="business-petroleum.html">Petroleum</a>
+                            <a class="dropdown-item" href="business-petrochemical.html">Petrochemical</a>
                         </div>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
