--- a/about-leader.html
+++ b/about-leader.html
@@ -51,8 +51,8 @@
 <!-- Mini Navbar (Under Nav) -->
 <div class="under-nav">
     <div class="container">
-    <a class="nav-link"  href="about_overview.html">Overview</a>
-    <a class="nav-link" id="border-green" href="about_leader.html">Our Leaders</a>
+    <a class="nav-link"  href="about-overview.html">Overview</a>
+    <a class="nav-link" id="border-green" href="about-leader.html">Our Leaders</a>
   </div>
 </div>
 
