--- a/about-overview.html
+++ b/about-overview.html
@@ -51,8 +51,8 @@
 
     <div class="under-nav">
         <div class="container">
-        <a class="nav-link" id="border-green"  href="about_overview.html">Overview</a>
-        <a class="nav-link"  href="about_leader.html">Our Leaders</a>
+        <a class="nav-link" id="border-green"  href="about-overview.html">Overview</a>
+        <a class="nav-link"  href="about-leader.html">Our Leaders</a>
       </div>
     </div>
     
