--- a/business-petroleum.html
+++ b/business-petroleum.html
@@ -52,9 +52,9 @@
     
     <div class="under-nav">
         <div class="container">
-            <a class="nav-link" href="business_overview.html">Overview</a>
-            <a class="nav-link" id="border-green" href="business_petroleum.html">Petroleum</a>
-            <a class="nav-link" href="business_petrochemical.html">Petrochemical</a>
+            <a class="nav-link" id="border-green" href="business-overview.html">Overview</a>
+            <a class="nav-link"  href="business-petroleum.html">Petroleum</a>
+            <a class="nav-link" href="business-petrochemical.html">Petrochemical</a>
         </div>
     </div>
     
