--- a/business-overview.html
+++ b/business-overview.html
@@ -114,7 +114,7 @@
                 <img src="images/vission.jpg">
             </div>
             <div class="right_side" >
-                <a href="try-product-petro.html"> <h2>Our Petroleum</h2></a>
+                <a href="business-petroleum.html"> <h2>Our Petroleum</h2></a>
                 <p>PEML takes immense pride in meeting the dynamic demands of oil and gas, specializing in the supply of high-quality petroleum and petrochemical products.  </p>
                 <p>Through our excellent energy commodities trading service, we ensure seamless delivery and a reliable supply chain that drives efficiency and supports the growth of our customers.  </p>
             </div>
@@ -130,7 +130,7 @@
                 <img src="images/vission.jpg">
             </div>
             <div class="right_side" >
-                <a href="try-product-petroChe.html"><h2>Our Petrochemical</h2></a>
+                <a href="business-petrochemical.html"><h2>Our Petrochemical</h2></a>
                 <p>PEML takes immense pride in meeting the dynamic demands of oil and gas, specializing in the supply of high-quality petroleum and petrochemical products.  </p>
                 <p>Through our excellent energy commodities trading service, we ensure seamless delivery and a reliable supply chain that drives efficiency and supports the growth of our customers.  </p>
             </div>
