--- a/business-petrochemical.html
+++ b/business-petrochemical.html
@@ -53,7 +53,7 @@
         <div class="container">
             <a class="nav-link" id="border-green" href="business-overview.html">Overview</a>
             <a class="nav-link"  href="business-petroleum.html">Petroleum</a>
-            <a class="nav-link" href="business-petrochemical.html">Petrochemical</a>
+            <a class="nav-link" id="border-green" href="business-petrochemical.html">Petrochemical</a>
         </div>
     </div>
 
