--- a/business-petrochemical.html
+++ b/business-petrochemical.html
@@ -51,7 +51,7 @@
     
     <div class="under-nav">
         <div class="container">
-            <a class="nav-link" id="border-green" href="business-overview.html">Overview</a>
+            <a class="nav-link"  href="business-overview.html">Overview</a>
             <a class="nav-link"  href="business-petroleum.html">Petroleum</a>
             <a class="nav-link" id="border-green" href="business-petrochemical.html">Petrochemical</a>
         </div>
