nbckjah ;ocijaoicj0ac

--- a/about-overview.html
+++ b/about-overview.html
@@ -103,19 +103,16 @@
         <div class="head_content">
             <h2>What we do</h2> 
         </div>
-        <div class="content">
-            <div class="left_side">
-        <p>At PEML, we value our customers by ensuring that energy commodities are tailored and delivered to meet their demands through our trading service, 
-         by offering high quality oil and gas products with a wide array of options for our valued customers to choose from.  </p>   
-       <!-- <p>We are dedicated to offering high quality oil and gas products with a wide array of options for our customers to choose from. </p> -->
-        </div>
-            <div class="right_side" style="text-align: right;">
-        <h1>We offer excellent energy commodities trading experience for our customers</h1>           
+        <div class="content about-content">
+            <div class="right_side about-headline">
+                <h1>We offer excellent energy commodities trading experience for our customers</h1>
             </div>
-        
+            <div class="left_side about-description">
+                <p>At PEML, we value our customers by ensuring that energy commodities are tailored and delivered to meet their demands through our trading service, by offering high quality oil and gas products with a wide array of options for our valued customers to choose from.</p>
+            </div>
+        </div>
     </div>
 </section>
-<br>
 <section id="about_us" >
     <div class="container">
         <div class="head_content">
