--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!-- Column 1 - About Us -->
             <div class="snapshot-column" style="    border-bottom: 1px solid #928f8f;" >
                 <img src="images/GalleryOriSize/about_us.jpg" alt="About Us" class="snapshot-img">
-                <a href="about_overview.html" class="custom-link"><h3>About Us</h3></a>
+                <a href="about-overview.html" class="custom-link"><h3>About Us</h3></a>
                 <p>Established in 2024, Ping Energy Marketing Limited mainly focuses on the 
                     marketing and trading.</p>
                 <!-- <a href="#" class="btn-link">History | Vision and Values</a> -->
@@ -105,7 +105,7 @@
             <!-- Column 2 - Our Leaders -->
             <div class="snapshot-column" style="    border-bottom: 1px solid #928f8f;" >
                 <img src="images/GalleryOriSize/our_leader.jpg" alt="Our Leaders" class="snapshot-img">
-                <a href="try-leader.html" class="custom-link"><h3>Our Leaders</h3></a>
+                <a href="about-leader.html" class="custom-link"><h3>Our Leaders</h3></a>
                 <p>Meet our experienced and skilled leadership team 
                     who drive the success of PEML.</p>
                 <!-- <a href="#" class="btn-link">Our Leaders</a> -->
@@ -114,7 +114,7 @@
             <!-- Column 3 - Product -->
             <div class="snapshot-column" style="    border-bottom: 1px solid #928f8f;">
                 <img src="images/GalleryOriSize/our_product.jpg" alt="Products" class="snapshot-img">
-                <a href="try-product-overview.html" class="custom-link"><h3>Our Businesses</h3></a>
+                <a href="business-overview.html" class="custom-link"><h3>Our Businesses</h3></a>
                 <p>PEML is committed to providing 
                     you an exceptional oil and gas trading experience. </p>
                 <!-- <a href="#" class="btn-link">Petroleum | Petrochemical</a> -->
