--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <link rel="stylesheet" href="css2/main.css">
     <link rel="stylesheet" href="css2/index.css">
     <link rel="stylesheet" href="css2/about-overview.css">
+    <link rel="stylesheet" href="css2/loading.css">
 
  
 
 </head>
 <body>
 
+    <!-- Loading Screen -->
+    <div class="loading-screen">
+        <div class="spinner"></div>
+    </div>
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container"> <!-- Add this container div -->
@@ -174,6 +179,16 @@
             observer.observe(card); // Observe each leader card
         });
     });
+    </script>
+    <script>
+        // Hide loading screen once the page is loaded
+        window.addEventListener('load', function () {
+            const loadingScreen = document.getElementById('loading-screen');
+            loadingScreen.style.opacity = '0'; // Fade out effect
+            setTimeout(() => {
+                loadingScreen.style.display = 'none'; // Hide completely after fade
+            }, 500);
+        });
     </script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
