--- a/index.html
+++ b/index.html
@@ -181,15 +181,20 @@
     });
     </script>
     <script>
-        // Hide loading screen once the page is loaded
-        window.addEventListener('load', function () {
-            const loadingScreen = document.getElementById('loading-screen');
-            loadingScreen.style.opacity = '0'; // Fade out effect
-            setTimeout(() => {
-                loadingScreen.style.display = 'none'; // Hide completely after fade
-            }, 500);
+        document.addEventListener('DOMContentLoaded', function() {
+            const loadingScreen = document.querySelector('.loading-screen');
+            
+            window.addEventListener('load', function() {
+                setTimeout(() => {
+                    loadingScreen.style.opacity = '0';
+                    setTimeout(() => {
+                        loadingScreen.style.display = 'none';
+                    }, 500);
+                }, 2000); // 2 seconds delay
+            });
         });
-    </script>
+        </script>
+
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
