--- a/business-petrochemical.html
+++ b/business-petrochemical.html
@@ -57,18 +57,15 @@
         </div>
     </div>
 
-<section id="about" class="section">    
+<!-- <section id="about" class="section">    
     <div class="container">        
         <div class="image" style="position: relative; ">
-            <!-- <div class="box" style="color: #f1f1f1;" >
-                <h3>Our Products</h3>
-                <p>We are committed to providing you an exceptional oil and gas trading experience!</p>
-            </div>             -->
+           
             <img src="images/GalleryOriSize/product.png" alt="About Ping Petroleum" width="900" height="500" style="display: block;">        
         </div>         
   
     </div>
-  </section>
+  </section> -->
 
   <section id="about_us">
     <div class="container">
