--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                 <h2>Contact Information</h2>
                 <p><strong>Ping Energy Marketing Limited</strong></p>
                 <p>
-                    <strong>Address</strong> <br>Office Suite 18-02 <br> Level 18 Ilham Tower<br> No.8 Jalan Binjai <br>50450 Kuala Lumpur <br>Malaysia
+                    <strong>Address</strong> <br>Office Suite 32-01<br> Level 32, Ilham Tower<br> No.8 Jalan Binjai<br> 50450 Kuala Lumpur Malaysia
                 </p>
                 <p><strong>Contact Us</strong> <br>+603 4816 8238  </p>
                 <p><strong>Email</strong> <br><a href="mailto:anuar.ebrahim@dnex.com.my">anuar.ebrahim@dnex.com.my</a></p>
